trunk/Archive2/0a/7aa4507cdb8b1a/output
main.cpp:20:12: error: invalid operands to binary expression ('ostream' (aka 'basic_ostream<char>') and 'std::unique_ptr<int>')
        std::cout << ptr;
        ~~~~~~~~~ ^  ~~~
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.0/../../../../include/c++/4.9.0/ostream:245:7: note: candidate function not viable: no known conversion from 'std::unique_ptr<int>' to 'const void *' for 1st argument; take the address of the argument with &
      operator<<(const void* __p)
      ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.0/../../../../include/c++/4.9.0/ostream:108:7: note: candidate function not viable: no known conversion from 'std::unique_ptr<int>' to '__ostream_type &(*)(__ostream_type &)' for 1st argument
      operator<<(__ostream_type& (*__pf)(__ostream_type&))
      ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.0/../../../../include/c++/4.9.0/ostream:117:7: note: candidate function not viable: no known conversion from 'std::unique_ptr<int>' to '__ios_type &(*)(__ios_type &)' for 1st argument
      operator<<(__ios_type& (*__pf)(__ios_type&))
      ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.0/../../../../include/c++/4.9.0/ostream:127:7: note: candidate function not viable: no known conversion from 'std::unique_ptr<int>' to 'std::ios_base &(*)(std::ios_base &)' for 1st argument
      operator<<(ios_base& (*__pf) (ios_base&))
      ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.0/../../../../include/c++/4.9.0/ostream:166:7: note: candidate function not viable: no known conversion from 'std::unique_ptr<int>' to 'long' for 1st argument
      operator<<(long __n)
      ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.0/../../../../include/c++/4.9.0/ostream:170:7: note: candidate function not viable: no known conversion from 'std::unique_ptr<int>' to 'unsigned long' for 1st argument
      operator<<(unsigned long __n)
      ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.0/../../../../include/c++/4.9.0/ostream:174:7: note: candidate function not viable: no known conversion from 'std::unique_ptr<int>' to 'bool' for 1st argument
      operator<<(bool __n)
      ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.0/../../../../include/c++/4.9.0/ostream:178:7: note: candidate function not viable: no known conversion from 'std::unique_ptr<int>' to 'short' for 1st argument
      operator<<(short __n);
      ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.0/../../../../include/c++/4.9.0/ostream:181:7: note: candidate function not viable: no known conversion from 'std::unique_ptr<int>' to 'unsigned short' for 1st argument
      operator<<(unsigned short __n)
      ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.0/../../../../include/c++/4.9.0/ostream:189:7: note: candidate function not viable: no known conversion from 'std::unique_ptr<int>' to 'int' for 1st argument
      operator<<(int __n);
      ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.0/../../../../include/c++/4.9.0/ostream:192:7: note: candidate function not viable: no known conversion from 'std::unique_ptr<int>' to 'unsigned int' for 1st argument
      operator<<(unsigned int __n)
      ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.0/../../../../include/c++/4.9.0/ostream:201:7: note: candidate function not viable: no known conversion from 'std::unique_ptr<int>' to 'long long' for 1st argument
      operator<<(long long __n)
      ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.0/../../../../include/c++/4.9.0/ostream:205:7: note: candidate function not viable: no known conversion from 'std::unique_ptr<int>' to 'unsigned long long' for 1st argument
      operator<<(unsigned long long __n)
      ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.0/../../../../include/c++/4.9.0/ostream:220:7: note: candidate function not viable: no known conversion from 'std::unique_ptr<int>' to 'double' for 1st argument
      operator<<(double __f)
      ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.0/../../../../include/c++/4.9.0/ostream:224:7: note: candidate function not viable: no known conversion from 'std::unique_ptr<int>' to 'float' for 1st argument
      operator<<(float __f)
      ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.0/../../../../include/c++/4.9.0/ostream:232:7: note: candidate function not viable: no known conversion from 'std::unique_ptr<int>' to 'long double' for 1st argument
      operator<<(long double __f)
      ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.0/../../../../include/c++/4.9.0/ostream:270:7: note: candidate function not viable: no known conversion from 'std::unique_ptr<int>' to '__streambuf_type *' (aka 'basic_streambuf<char, std::char_traits<char> > *') for 1st argument
      operator<<(__streambuf_type* __sb);
      ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.0/../../../../include/c++/4.9.0/ostream:476:5: note: candidate function [with _CharT = char, _Traits = std::char_traits<char>] not viable: no known conversion from 'std::unique_ptr<int>' to 'char' for 2nd argument
    operator<<(basic_ostream<_CharT, _Traits>& __out, char __c)
    ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.0/../../../../include/c++/4.9.0/ostream:482:5: note: candidate function [with _Traits = std::char_traits<char>] not viable: no known conversion from 'std::unique_ptr<int>' to 'char' for 2nd argument
    operator<<(basic_ostream<char, _Traits>& __out, char __c)
    ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.0/../../../../include/c++/4.9.0/ostream:488:5: note: candidate function [with _Traits = std::char_traits<char>] not viable: no known conversion from 'std::unique_ptr<int>' to 'signed char' for 2nd argument
    operator<<(basic_ostream<char, _Traits>& __out, signed char __c)
    ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.0/../../../../include/c++/4.9.0/ostream:493:5: note: candidate function [with _Traits = std::char_traits<char>] not viable: no known conversion from 'std::unique_ptr<int>' to 'unsigned char' for 2nd argument
    operator<<(basic_ostream<char, _Traits>& __out, unsigned char __c)
    ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.0/../../../../include/c++/4.9.0/ostream:530:5: note: candidate function [with _Traits = std::char_traits<char>] not viable: no known conversion from 'std::unique_ptr<int>' to 'const char *' for 2nd argument
    operator<<(basic_ostream<char, _Traits>& __out, const char* __s)
    ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.0/../../../../include/c++/4.9.0/ostream:543:5: note: candidate function [with _Traits = std::char_traits<char>] not viable: no known conversion from 'std::unique_ptr<int>' to 'const signed char *' for 2nd argument
    operator<<(basic_ostream<char, _Traits>& __out, const signed char* __s)
    ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.0/../../../../include/c++/4.9.0/ostream:548:5: note: candidate function [with _Traits = std::char_traits<char>] not viable: no known conversion from 'std::unique_ptr<int>' to 'const unsigned char *' for 2nd argument
    operator<<(basic_ostream<char, _Traits>& __out, const unsigned char* __s)
    ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.0/../../../../include/c++/4.9.0/ostream:602:5: note: candidate function [with _CharT = char, _Traits = std::char_traits<char>, _Tp = std::unique_ptr<int, std::default_delete<int> >] not viable: no known conversion from 'ostream' (aka 'basic_ostream<char>') to 'basic_ostream<char, std::char_traits<char> > &&' for 1st argument
    operator<<(basic_ostream<_CharT, _Traits>&& __os, const _Tp& __x)
    ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.0/../../../../include/c++/4.9.0/bits/ostream.tcc:321:5: note: candidate function [with _CharT = char, _Traits = std::char_traits<char>] not viable: no known conversion from 'std::unique_ptr<int>' to 'const char *' for 2nd argument
    operator<<(basic_ostream<_CharT, _Traits>& __out, const char* __s)
    ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.0/../../../../include/c++/4.9.0/ostream:471:5: note: candidate template ignored: deduced conflicting types for parameter '_CharT' ('char' vs. 'std::unique_ptr<int, std::default_delete<int> >')
    operator<<(basic_ostream<_CharT, _Traits>& __out, _CharT __c)
    ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.0/../../../../include/c++/4.9.0/bits/basic_string.h:2772:5: note: candidate template ignored: could not match 'basic_string' against 'unique_ptr'
    operator<<(basic_ostream<_CharT, _Traits>& __os,
    ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.0/../../../../include/c++/4.9.0/ostream:513:5: note: candidate template ignored: could not match 'const _CharT *' against 'std::unique_ptr<int>'
    operator<<(basic_ostream<_CharT, _Traits>& __out, const _CharT* __s)
    ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.0/../../../../include/c++/4.9.0/bits/shared_ptr.h:66:5: note: candidate template ignored: could not match '__shared_ptr' against 'unique_ptr'
    operator<<(std::basic_ostream<_Ch, _Tr>& __os,
    ^
1 error generated.
